Map spacing fixed. Gah.

--- a/sms_frontend/src/components/Map/MapData.css
+++ b/sms_frontend/src/components/Map/MapData.css
@@ -1,5 +1,5 @@
 .leaflet-container {
-  height: 800px;
+  height: 100%;
   width: 100%;
 }
 
